:bug: 修复异常内存占用